syntax = "proto3";

option go_package = "github.com/khulnasoft/proxy/go/khulnasoft/api;khulnasoft";

package khulnasoft;

message NetworkFilter {
  // Path to the proxylib to be opened
  string proxylib = 1;

  // Transparent set of parameters provided for proxylib initialization
  map<string, string> proxylib_params = 2;

  // Path to the unix domain socket for the khulnasoft access log.
  string access_log_path = 5;
}
