syntax = "proto3";

option go_package = "github.com/khulnasoft/proxy/go/khulnasoft/api;khulnasoft";

package khulnasoft;

message TestBpfMetadata {
  // 'true' if the filter is on ingress listener, 'false' for egress listener.
  bool is_ingress = 2;
  bool is_l7lb = 4;
}
